syntax = "proto3";
option csharp_namespace = "PbxApiControl";
package call;
import "google/protobuf/empty.proto";


// Сервис для управления вызовами PBX
service CallPbxService {
  // Инициирует новый вызов.
  rpc MakeCall(MakeCallRequest) returns (BaseCallReply);
  
}

// Запрос на создание вызова.
message MakeCallRequest {
  // Номер для вызова.
  string to = 1;

  // Номер, с которого осуществляется вызов.
  string from = 2;
}

// Ответ на запрос выполнения операции с вызовом.
message BaseCallReply {
  // Результат выполнения операции.
  bool result = 1;

  // Сообщение о результате выполнения операции.
  string message = 2;
}